--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 				<div class="container">
 					<div class="theme-title">
 						<h2>ABOUT DYSTOPIAN VENTURES</h2>
-						<p>Dystopian Ventures if a forward looking, seed-focused venture group that aims to kickstart technologies that may one day lead to dystopia. Our team believes that only through an exploration of dystopia, can we one day achieve utopia (e.g. VR porn).
+						<p>Dystopian Ventures if a forward looking, seed-focused venture group that aims to kickstart technologies that may one day lead to dystopia. Our team believes that only through an exploration of dystopia, can we one day achieve utopia.
                         <br> Our focus in funding is finding the right team with the right idea that will one day change the world. We provide seed funding between 150k to 1.5M. </p>
 					</div> <!-- /.theme-title -->
 
